# aoc-2020

./: .gitignore  README.md
multilang/: README.md
multilang/day01-rockstar/: README.md  day01-1.rock  day01-2.rock
multilang/day02-bash/: README.md  day02-1.sh  day02-2.sh  input.txt
multilang/day04-regex/: README.md  day04-1.sh  day04-2.sh
multilang/day05-haskell/: README.md  day05.hs
multilang/day06-racket/: README.md  day06.rkt  input.txt
rust/: Cargo.toml
rust/benches/: bench.rs
rust/src/: lib.rs  parse.rs  run.rs  utils.rs
rust/src/day01/: input.txt  mod.rs
rust/src/day02/: mod.rs
rust/src/day03/: input.txt  mod.rs
rust/src/day04/: mod.rs
rust/src/day05/: input.txt  mod.rs
rust/src/day06/: mod.rs
rust/src/day07/: README.md  input.txt  mod.rs
rust/src/day08/: input.txt  mod.rs
rust/src/day09/: mod.rs
rust/src/day10/: input.txt  mod.rs
rust/src/day11/: input.txt  mod.rs
rust/src/day12/: input.txt  mod.rs
rust/src/day13/: input.txt  mod.rs
rust/src/day14/: input.txt  mod.rs
rust/src/day15/: mod.rs
rust/src/day16/: mod.rs
rust/src/day17/: mod.rs
rust/src/day18/: mod.rs
rust/src/day19/: mod.rs
rust/src/day20/: mod.rs
rust/src/day21/: input.txt  mod.rs
rust/src/day22/: mod.rs
rust/src/day23/: mod.rs
rust/src/day24/: mod.rs
rust/src/day25/: mod.rs
