[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Ivan Smirnov <i.s.smirnov@gmail.com>"]
edition = "2018"

[dependencies]
arrayvec = "0.5"
ctor = "0.1"
memchr = "2.3"
quickersort = "3.0"
packed_simd_2 = "0.3"
rustc-hash = "1.1"
bigint = "4.4"
itertools = "0.9"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[dev-dependencies]
criterion = "0.3"

[lib]
name = "aoc2020"
path = "src/lib.rs"
bench = false

[[bin]]
name = "run"
path = "src/run.rs"
bench = false

[[bench]]
name = "bench"
harness = false
